--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- CSS Implementing Plugins -->
-  <link rel="stylesheet" href="src/assets/vendor/font-awesome/css/fontawesome-all.min.css">
-  <link rel="stylesheet" href="src/assets/vendor/animate.css/animate.min.css">
-  <link rel="stylesheet" href="src/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-  <link rel="stylesheet" href="src/assets/vendor/fancybox/jquery.fancybox.css">
-  <link rel="stylesheet" href="src/assets/vendor/slick-carousel/slick/slick.css">
+  <link rel="stylesheet" href="./src/assets/vendor/font-awesome/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="./src/assets/vendor/animate.css/animate.min.css">
+  <link rel="stylesheet" href="./src/assets/vendor/hs-megamenu/src/hs.megamenu.css">
+  <link rel="stylesheet" href="./src/assets/vendor/fancybox/jquery.fancybox.css">
+  <link rel="stylesheet" href="./src/assets/vendor/slick-carousel/slick/slick.css">
 
   <!-- CSS Front Template -->
-  <link rel="stylesheet" href="src/assets/css/theme.min.css">
+  <link rel="stylesheet" href="./src/assets/css/theme.min.css">
   </head>
 
 
@@ -29,6 +29,80 @@
   <body>
     <div id="app">
     </div>
-    <script src="/dist/build.js"></script>
   </body>
+
+
+
+
+
+  <!-- Go to Top -->
+  <a class="js-go-to u-go-to" href="#" data-position='{"bottom": 15, "right": 15 }' data-type="fixed"
+  data-offset-top="400" data-compensation="#header" data-show-effect="slideInUp" data-hide-effect="slideOutDown">
+  <span class="fas fa-arrow-up u-go-to__inner"></span>
+</a>
+<!-- End Go to Top -->
+
+<!-- JS Global Compulsory -->
+<script src="./src/assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="./src/assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
+<script src="./src/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="./src/assets/vendor/bootstrap/bootstrap.min.js"></script>
+
+<!-- JS Implementing Plugins -->
+<script src="./src/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+<script src="./src/assets/vendor/svg-injector/dist/svg-injector.min.js"></script>
+<script src="./src/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="./src/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="./src/assets/vendor/slick-carousel/slick/slick.js"></script>
+
+<!-- JS Front -->
+<!-- Comment out for production -->
+<script src="./src/assets/js/hs.core.js"></script>
+<script src="./src/assets/js/components/hs.header.js"></script>
+<script src="./src/assets/js/components/hs.validation.js"></script>
+<script src="./src/assets/js/components/hs.fancybox.js"></script>
+<script src="./src/assets/js/components/hs.slick-carousel.js"></script>
+<script src="./src/assets/js/components/hs.svg-injector.js"></script>
+<script src="./src/assets/js/components/hs.go-to.js"></script>
+
+<!-- JS Plugins Init. -->
+<script>
+  $(window).on('load', function () {
+    // initialization of HSMegaMenu component
+    $('.js-mega-menu').HSMegaMenu({
+      event: 'hover',
+      pageContainer: $('.container'),
+      breakpoint: 767.98,
+      hideTimeOut: 0
+    });
+
+    // initialization of svg injector module
+    $.HSCore.components.HSSVGIngector.init('.js-svg-injector');
+  });
+
+  $(document).on('ready', function () {
+    // initialization of header
+    $.HSCore.components.HSHeader.init($('#header'));
+
+    // initialization of form validation
+    $.HSCore.components.HSValidation.init('.js-validate', {
+      rules: {
+        confirmPassword: {
+          equalTo: '#signupPassword'
+        }
+      }
+    });
+
+    // initialization of fancybox
+    $.HSCore.components.HSFancyBox.init('.js-fancybox');
+
+    // initialization of slick carousel
+    $.HSCore.components.HSSlickCarousel.init('.js-slick-carousel');
+
+    // initialization of go to
+    $.HSCore.components.HSGoTo.init('.js-go-to');
+  });
+</script>
+<script src="../assets/js/components/theme.min.js"></script>
+<script src="/dist/build.js"></script>
 </html>
