--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
   </body>
 
 
-
-
-
   <!-- Go to Top -->
   <a class="js-go-to u-go-to" href="#" data-position='{"bottom": 15, "right": 15 }' data-type="fixed"
   data-offset-top="400" data-compensation="#header" data-show-effect="slideInUp" data-hide-effect="slideOutDown">
@@ -103,6 +100,6 @@
     $.HSCore.components.HSGoTo.init('.js-go-to');
   });
 </script>
-<script src="../assets/js/components/theme.min.js"></script>
+<script src="./src/assets/js/theme.min.js"></script>
 <script src="/dist/build.js"></script>
 </html>
